[package]
name = "rrbp"
version = "0.1.0"
authors = ["Wolfgang Kuehl <wolfgang@cwkuehl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile]
dev = { opt-level = 0, debuginfo = 2, panic = "unwind" }
release = { opt-level = 3, panic = "abort" }

[dependencies]
rep = { path = "./rep" }
rocket = { version = "0.5.0-rc", features = ["tls", "json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc", features = [
  "handlebars",
  "tera",
] }
rocket_sync_db_pools = { version = "0.1.0-rc", default-features = false, features = [
  "diesel_sqlite_pool",
] }
#handlebars = "4"
#handlebars_misc_helpers = "0"
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.16"
hex = "0.4"
